heima-k8s/code/day4/svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-externalname
  namespace: dev
spec:
  selector:
    app: nginx-pod
  type: ExternalName # service类型
  externalName: www.wowoo.com  #改成ip地址也可以
